--- a/content/preamble.tex
+++ b/content/preamble.tex
@@ -14,7 +14,7 @@
         \centering
         \large
         WE, THE PEOPLE OF INDIA, having solemnly resolved to constitute India into a 
-        \Inserted{SOVEREIGN SOCIALIST SECULAR DEMOCRATIC}{Constitution (Forty-second Amendment) Act, 1976, Preamble \wef{3-1-1977}} 
+        \Substituted{SOVEREIGN SOCIALIST SECULAR DEMOCRATIC}{SOVEREIGN DEMOCRATIC}{Constitution (Forty-second Amendment) Act, 1976, Preamble \wef{3-1-1977}} 
         REPUBLIC and to secure to all its citizens:
         
         \vspace{1em}
@@ -36,7 +36,7 @@
         \vspace{0.5em}
         
         FRATERNITY assuring the dignity of the individual and the 
-        \Inserted{unity and integrity}{Constitution (Forty-second Amendment) Act, 1976, Preamble \wef{3-1-1977}} 
+        \Inserted{Constitution (Forty-second Amendment) Act, 1976, Preamble \wef{3-1-1977}}{unity and integrity} 
         of the Nation;
         
         \vspace{1.5em}
