--- a/examples/sample_article.tex
+++ b/examples/sample_article.tex
@@ -1,38 +1,40 @@
 %% Sample article demonstrating amendment features
+%% This file shows how to use the modular structure with actual article files
 \documentclass[showamendments]{soi}
+
+%% Load configuration
+\input{config}
 
 \begin{document}
 
 \Part{III}{FUNDAMENTAL RIGHTS}
 
-%% Article demonstrating various amendment types
-\DeclareArticle{21}{A}{fundamental-rights}
-\Article{Right to education}{%
-    \Inserted{The State shall provide free and compulsory education to all children of the age of six to fourteen years in such manner as the State may, by law, determine.}{Constitution (Eighty-sixth Amendment) Act, 2002, s. 2 \wef{1-4-2010}}
-}
+%% Use actual modular article files to demonstrate the system
+\section*{General}
+\input{content/articles/article_12}
+\input{content/articles/article_13}
 
-%% Article demonstrating substitution
-\DeclareArticle{19}{}{fundamental-rights}
-\Article{Protection of certain rights regarding freedom of speech, etc.}{%
-    \Clause{All citizens shall have the right---}
-    
-    \SubClause{to freedom of speech and expression;}
-    
-    \SubClause{to assemble peaceably and without arms;}
-    
-    \SubClause{to form associations or unions \Inserted{or co-operative societies}{Constitution (Ninety-seventh Amendment) Act, 2011, s. 2 \wef{12-1-2012}};}
-    
-    \SubClause{to move freely throughout the territory of India;}
-    
-    \SubClause{to reside and settle in any part of the territory of India; and}
-    
-    \SubClause{\Substituted{to practise any profession, or to carry on any occupation, trade or business.}{to acquire, hold and dispose of property; and to practise any profession, or to carry on any occupation, trade or business.}{Constitution (Forty-fourth Amendment) Act, 1978, s. 2 \wef{20-6-1979}}}
-}
+\section*{Right to Equality}
+\input{content/articles/article_14}
+\input{content/articles/article_15}
 
-%% Example of omitted article
-\DeclareArticle{31}{}{fundamental-rights}
-\Article{Right to property}{%
-    \Omitted{Constitution (Forty-fourth Amendment) Act, 1978, s. 6 \wef{20-6-1979}}
-}
+\section*{Right to Freedom}
+\input{content/articles/article_19}
 
-\end{document}
+\section*{Right to Life and Personal Liberty}
+\input{content/articles/article_21}
+\input{content/articles/article_21a}
+
+%% Demonstrate page management with amendments
+\section*{Amendment Features Demonstrated}
+
+This sample shows:
+\begin{itemize}
+\item Modular article inclusion using \texttt{\textbackslash{}input\{content/articles/...\}}
+\item Amendment tracking with \texttt{\textbackslash{}Inserted}, \texttt{\textbackslash{}Substituted}, and \texttt{\textbackslash{}Omitted}
+\item Page management keeping articles and footnotes together
+\item Proper constitutional formatting with clauses and sub-clauses
+\item Article numbering with suffixes (e.g., Article 21A)
+\end{itemize}
+
+\end{document>
